@@ -22,7 +22,7 @@ LangEditorPreferencePage.name = Editor
 LangEditorTypingPreferencePage.name = Typing
 LangEditorSyntaxColoringPreferencePage.name = Source Coloring
 #LangEditorHoversPreferencePage.name = Hovers
-#LangEditorFoldingPreferencePage.name = Folding
+LangEditorFoldingPreferencePage.name = Folding
 LangContentAssistPreferencePage.name = Content Assist
 LangCodeTemplatesPreferencePage.name = Code Templates
 LangCompilersPreferencePage.name = Compilers
